// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > and by using the keyboard the user can select and remove an option 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_10_"
      id="radix-_r_v_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <span
        class="badge badge-ghost relative [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden max-h-5 px-1 rounded-xl flex items-center gap-1"
      >
        <span
          class="text-xs"
        >
          Svelte
        </span>
        <button
          aria-label="Remove Svelte option"
          aria-roledescription="button to remove option"
          type="button"
        >
          <span
            class="sr-only"
          >
            Remove Svelte option
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 hover:stroke-destructive"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </span>
      <input
        aria-activedescendant="radix-_r_13_"
        aria-autocomplete="list"
        aria-controls="radix-_r_u_"
        aria-expanded="true"
        aria-labelledby="radix-_r_v_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_10_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-activedescendant="radix-_r_13_"
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-_r_u_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="React"
            id="radix-_r_11_"
            role="option"
          >
            React
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Vue"
            id="radix-_r_12_"
            role="option"
          >
            Vue
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Svelte"
            id="radix-_r_13_"
            role="option"
          >
            Svelte
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and by using the keyboard the user can select and remove an option 2`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_10_"
      id="radix-_r_v_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <span
        class="badge badge-ghost relative [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden max-h-5 px-1 rounded-xl flex items-center gap-1"
      >
        <span
          class="text-xs"
        >
          Svelte
        </span>
        <button
          aria-label="Remove Svelte option"
          aria-roledescription="button to remove option"
          type="button"
        >
          <span
            class="sr-only"
          >
            Remove Svelte option
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 hover:stroke-destructive"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </span>
      <input
        aria-activedescendant="radix-_r_13_"
        aria-autocomplete="list"
        aria-controls="radix-_r_u_"
        aria-expanded="true"
        aria-labelledby="radix-_r_v_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_10_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-activedescendant="radix-_r_13_"
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-_r_u_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="React"
            id="radix-_r_11_"
            role="option"
          >
            React
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Vue"
            id="radix-_r_12_"
            role="option"
          >
            Vue
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Svelte"
            id="radix-_r_13_"
            role="option"
          >
            Svelte
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user can select and remove an option 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_q_"
      id="radix-_r_p_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <span
        class="badge badge-ghost relative [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden max-h-5 px-1 rounded-xl flex items-center gap-1"
      >
        <span
          class="text-xs"
        >
          React
        </span>
        <button
          aria-label="Remove React option"
          aria-roledescription="button to remove option"
          type="button"
        >
          <span
            class="sr-only"
          >
            Remove React option
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 hover:stroke-destructive"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_o_"
        aria-expanded="true"
        aria-labelledby="radix-_r_p_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_q_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-_r_o_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="React"
            id="radix-_r_r_"
            role="option"
          >
            React
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Vue"
            id="radix-_r_s_"
            role="option"
          >
            Vue
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Svelte"
            id="radix-_r_t_"
            role="option"
          >
            Svelte
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user can select and remove an option 2`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_q_"
      id="radix-_r_p_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <span
        class="badge badge-ghost relative [&>span]:truncate [&>span]:max-w-24 aria-disabled:opacity-50 aria-disabled:cursor-not-allowed focus-visible:outline-hidden max-h-5 px-1 rounded-xl flex items-center gap-1"
      >
        <span
          class="text-xs"
        >
          React
        </span>
        <button
          aria-label="Remove React option"
          aria-roledescription="button to remove option"
          type="button"
        >
          <span
            class="sr-only"
          >
            Remove React option
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4 hover:stroke-destructive"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
      </span>
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_o_"
        aria-expanded="true"
        aria-labelledby="radix-_r_p_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_q_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-_r_o_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="React"
            id="radix-_r_r_"
            role="option"
          >
            React
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Vue"
            id="radix-_r_s_"
            role="option"
          >
            Vue
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Svelte"
            id="radix-_r_t_"
            role="option"
          >
            Svelte
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user clicks on the input > show the list of available options 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_8_"
      id="radix-_r_7_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_6_"
        aria-expanded="true"
        aria-labelledby="radix-_r_7_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_8_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-_r_6_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="React"
            id="radix-_r_9_"
            role="option"
          >
            React
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Vue"
            id="radix-_r_a_"
            role="option"
          >
            Vue
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Svelte"
            id="radix-_r_b_"
            role="option"
          >
            Svelte
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user enters a text that does not match any options > show an empty list 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_k_"
      id="radix-_r_j_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_i_"
        aria-expanded="true"
        aria-labelledby="radix-_r_j_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_k_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value="Brave"
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-_r_i_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            class="py-6 text-center text-sm"
            cmdk-empty=""
            role="presentation"
          >
            <span
              class="text-muted-foreground"
            >
              No results found
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user enters a text that matches an option > show the list of available options 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_e_"
      id="radix-_r_d_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_c_"
        aria-expanded="true"
        aria-labelledby="radix-_r_d_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_e_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value="et"
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-_r_c_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="Svelte"
            id="radix-_r_h_"
            role="option"
          >
            Svelte
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="React"
            id="radix-_r_f_"
            role="option"
          >
            React
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user enters a text that matches an option > show the list of available options 2`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_e_"
      id="radix-_r_d_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-activedescendant="radix-_r_h_"
        aria-autocomplete="list"
        aria-controls="radix-_r_c_"
        aria-expanded="true"
        aria-labelledby="radix-_r_d_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_e_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-activedescendant="radix-_r_h_"
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-_r_c_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="Vue"
            id="radix-_r_g_"
            role="option"
          >
            Vue
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="Svelte"
            id="radix-_r_h_"
            role="option"
          >
            Svelte
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="false"
            data-value="React"
            id="radix-_r_f_"
            role="option"
          >
            React
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > and the user enters a text that matches an option > show the list of available options 3`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_e_"
      id="radix-_r_d_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_c_"
        aria-expanded="true"
        aria-labelledby="radix-_r_d_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_e_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value="react"
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-_r_c_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="relative select-none items-center aria-disabled:underline aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:cursor-default cursor-pointer transition-colors flex justify-between aria-selected:bg-base-300 aria-selected:text-base-content rounded-xs py-1.5 px-2 text-sm outline-hidden"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="React"
            id="radix-_r_f_"
            role="option"
          >
            React
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has accent variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_21_"
      id="radix-_r_20_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      accent badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-accent shadow-accent [&:has(input:focus)]:outline-accent [&:has(input:focus-within)]:outline-accent min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_1v_"
        aria-expanded="true"
        aria-labelledby="radix-_r_20_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_21_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has default variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_1o_"
      id="radix-_r_1n_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      default badge
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 [&:has(input:focus)]:border-[currentColor] [&:has(input:focus-within)]:border-[currentColor] [&:has(input:focus)]:outline-ghost [&:has(input:focus-within)]:outline-ghost min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_1m_"
        aria-expanded="true"
        aria-labelledby="radix-_r_1n_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_1o_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has error variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_2d_"
      id="radix-_r_2c_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      error badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-error shadow-error [&:has(input:focus)]:outline-error [&:has(input:focus-within)]:outline-error min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_2b_"
        aria-expanded="true"
        aria-labelledby="radix-_r_2c_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_2d_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has info variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_24_"
      id="radix-_r_23_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      info badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-info shadow-info [&:has(input:focus)]:outline-info [&:has(input:focus-within)]:outline-info min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_22_"
        aria-expanded="true"
        aria-labelledby="radix-_r_23_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_24_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has large (lg) size 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_1l_"
      id="radix-_r_1k_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      MultiSelect large
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-lg px-3 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_1j_"
        aria-expanded="true"
        aria-labelledby="radix-_r_1k_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_1l_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1 p-3"
        cmdk-list=""
        id="radix-_r_1j_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            class="py-6 text-center text-sm"
            cmdk-empty=""
            role="presentation"
          >
            <span
              class="text-muted-foreground"
            >
              No results found
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has medium (md) size 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_1i_"
      id="radix-_r_1h_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      MultiSelect medium
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-sm px-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_1g_"
        aria-expanded="true"
        aria-labelledby="radix-_r_1h_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_1i_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1 p-2"
        cmdk-list=""
        id="radix-_r_1g_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            class="py-6 text-center text-sm"
            cmdk-empty=""
            role="presentation"
          >
            <span
              class="text-muted-foreground"
            >
              No results found
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has no outline 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_19_"
      id="radix-_r_18_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      MultiSelect has no outline
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_17_"
        aria-expanded="true"
        aria-labelledby="radix-_r_18_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_19_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has outline 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_16_"
      id="radix-_r_15_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      MultiSelect has outline
    </label>
    <div
      class="shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border min-h-fit text-sm border-base-content/20 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_14_"
        aria-expanded="true"
        aria-labelledby="radix-_r_15_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_16_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has primary variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_1r_"
      id="radix-_r_1q_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      primary badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-primary shadow-primary [&:has(input:focus)]:outline-primary [&:has(input:focus-within)]:outline-primary min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_1p_"
        aria-expanded="true"
        aria-labelledby="radix-_r_1q_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_1r_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has secondary variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_1u_"
      id="radix-_r_1t_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      secondary badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-secondary shadow-secondary [&:has(input:focus)]:outline-secondary [&:has(input:focus-within)]:outline-secondary min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_1s_"
        aria-expanded="true"
        aria-labelledby="radix-_r_1t_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_1u_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has small (sm) size 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_1f_"
      id="radix-_r_1e_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      MultiSelect small
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-sm px-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_1d_"
        aria-expanded="true"
        aria-labelledby="radix-_r_1e_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_1f_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1 p-1.5"
        cmdk-list=""
        id="radix-_r_1d_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            class="py-6 text-center text-sm"
            cmdk-empty=""
            role="presentation"
          >
            <span
              class="text-muted-foreground"
            >
              No results found
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has success variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_27_"
      id="radix-_r_26_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      success badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-success shadow-success [&:has(input:focus)]:outline-success [&:has(input:focus-within)]:outline-success min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_25_"
        aria-expanded="true"
        aria-labelledby="radix-_r_26_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_27_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has tiny (xs) size 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_1c_"
      id="radix-_r_1b_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      MultiSelect tiny
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 text-xs px-2 [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_1a_"
        aria-expanded="true"
        aria-labelledby="radix-_r_1b_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_1c_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1 p-1"
        cmdk-list=""
        id="radix-_r_1a_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            class="py-6 text-center text-sm"
            cmdk-empty=""
            role="presentation"
          >
            <span
              class="text-muted-foreground"
            >
              No results found
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > has warning variant 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_2a_"
      id="radix-_r_29_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      warning badge
    </label>
    <div
      class="shadow-2xs flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 border border-warning shadow-warning [&:has(input:focus)]:outline-warning [&:has(input:focus-within)]:outline-warning min-h-fit text-sm flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_28_"
        aria-expanded="true"
        aria-labelledby="radix-_r_29_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_2a_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > renders a multi select input 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_5_"
      id="radix-_r_4_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_3_"
        aria-expanded="true"
        aria-labelledby="radix-_r_4_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_5_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    />
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > renders no options 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-md text-base-content overflow-visible bg-transparent flex flex-col h-fit"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-_r_2_"
      id="radix-_r_1_"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Choose framework
    </label>
    <div
      class="border border-base-content/20 shadow-2xs shadow-base-content/20 flex items-center justify-between px-2 rounded-md transition-all gap-1 [&:has(input:focus)]:duration-100 [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-offset-2 [&:has(input:focus-within)]:duration-100 [&:has(input:focus-within)]:outline-2 [&:has(input:focus-within)]:outline-offset-2 min-h-fit text-sm [&:has(input:focus)]:border-base-content [&:has(input:focus-within)]:border-base-content flex-wrap h-fit w-fit py-2 overflow-hidden"
    >
      <input
        aria-autocomplete="list"
        aria-controls="radix-_r_0_"
        aria-expanded="true"
        aria-labelledby="radix-_r_1_"
        autocomplete="off"
        autocorrect="off"
        class="bg-transparent outline-hidden flex-1 my-px"
        cmdk-input=""
        id="radix-_r_2_"
        placeholder="Select your framework"
        role="combobox"
        spellcheck="false"
        tabindex="0"
        type="text"
        value=""
      />
    </div>
    <div
      class="relative"
    >
      <div
        aria-label="Suggestions"
        class="max-h-[300px] overflow-y-auto overflow-x-hidden p-1 bg-base-100 flex flex-col gap-2 rounded-md scrollbar-thin scrollbar-track-transparent transition-colors scrollbar-thumb-muted-foreground dark:scrollbar-thumb-muted scrollbar-thumb-rounded-lg w-full absolute shadow-md z-10 border border-muted top-1"
        cmdk-list=""
        id="radix-_r_0_"
        role="listbox"
        tabindex="-1"
      >
        <div
          cmdk-list-sizer=""
        >
          <div
            class="py-6 text-center text-sm"
            cmdk-empty=""
            role="presentation"
          >
            <span
              class="text-muted-foreground"
            >
              No results found
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
